# ChangeLog for sys-fs/udev
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/udev/ChangeLog,v 1.392 2008/07/25 21:43:24 zzam Exp $

*udev-125-r1 (25 Jul 2008)

  25 Jul 2008; Matthias Schwarzott <zzam@gentoo.org> +udev-125-r1.ebuild:
  Added missing cd command, thanks to Polynomial-C, Bug #232954. Hopefully
  this also fixes Bug #232923.

*udev-125 (25 Jul 2008)

  25 Jul 2008; Matthias Schwarzott <zzam@gentoo.org>
  +files/write_root_link_rule-125, +udev-125.ebuild:
  Version bumped. rules were moved inside the tarball. Rewritten
  write_root_link_rule due to better support from udevadm.

  18 Jun 2008; Matthias Schwarzott <zzam@gentoo.org>
  -files/05-udev-early.rules-104-r5, -files/udev.rules-104-r10,
  -files/udev-104-netif-rename-busywait.patch,
  -files/udev-104-peristent-net-disable-xen.patch,
  -files/udev-104-persistent-net-fix-name-dups.patch,
  -files/udev-start-104-r12.sh, -files/udev-start-104-r13.sh,
  -files/udev-stop-104-r13.sh, -files/udev-stop-104-r8.sh,
  -files/udev-105-unlink-db-files.patch, -files/udev-105-vol_id-fix.patch,
  -files/modprobe-105.sh, -files/05-udev-early.rules-106-r5,
  -files/udev-start-110-r1.sh, -files/udev-stop-110-r1.sh,
  -files/udev-start-111-r3.sh, -files/udev-112-rules.diff,
  -files/udev-113-r1-rules.diff, -files/udev-113-r2-rules.diff,
  -files/udev-114-fix-persistent-net.diff, -files/95-net.rules,
  -files/modprobe-111-r1.sh, -files/udev-115-add-special-rule-files.diff,
  -files/95-udev-late.rules, -files/modprobe-104-r12.sh,
  -files/modprobe-113-r2.sh, -files/udev-115-fix-modprobe-calls.diff,
  -files/udev-start-115-r3.sh, -files/udev-start-115-r6.sh,
  -files/udev-115-rules-update.diff,
  -files/udev-115-update-gentoo-rules-2.diff,
  -files/udev-116-gentoo-rules-update.diff,
  -files/udev-116-path-to-logger.diff, -files/udev-start-118-r1.sh,
  -files/udev-start-119-r1.sh, -files/udev-121-cdrom_id-segfault.diff,