@@ -38,14 +38,13 @@ EBUILD udev-119.ebuild 10150 RMD160 dc6bdecc6c6dfdbcf8d2ef0fd1346995c234067a SHA
 EBUILD udev-122-r1.ebuild 10691 RMD160 64e56d50e767de48d77e8d0c7f88b2a04adbe211 SHA1 e7264e5edd79b0ee1b1d52cbaa4fc17697737a49 SHA256 c9ec083656534c838651de577a08a2ece6036bca6c5d817c1ff7a309cc007863
 EBUILD udev-122.ebuild 10155 RMD160 0f97a0ecc6511abcdad038021f5667679f5cc59e SHA1 aa4e60829cfe22f645e99bab51182ef86d10f088 SHA256 665d1cbb8ff55156ee63c2a58bf79a06486068a144e1db67905456ffc17ebce7
 EBUILD udev-124.ebuild 10693 RMD160 39379d2d1ac8f019826fdf0002deb55463ff0ab8 SHA1 a9e5ea6068d23e3c88ebc94d87c80fc7d73dcb95 SHA256 6e58a357d4ecb22978643b887dafc23729331c67c18784c25d3e6aec5dfd067f
-EBUILD udev-125-r1.ebuild 10734 RMD160 825bb7b10ff5bd2734de1de258bc76705790c1ca SHA1 3cba87fc9f71f0432f48da8c0f5a8397a4a9fb7f SHA256 d384cbc89ba8f0ee2e8d5174bff34b8f977c21c1df2fa4c9e47a3a6f44a442d8
-EBUILD udev-125.ebuild 10731 RMD160 56aab6549afc71d9efc24e4022edb45abca7ce9a SHA1 8ca985cfee11c4286bc642f120642687902b3126 SHA256 156f66c160deb9a7315fdb3b9646b7de93f838db4d29c6c028392ee1701622aa
-MISC ChangeLog 80645 RMD160 a7a0e61779b6e57fd4b3caa5637659d1a9b96d44 SHA1 74d961a705f0cb194de05c0dda59375f8ad92e2a SHA256 3a1a8474904830aa4ad432b07eaf2369dff1b7892bdecb98d251b4d29043b5ab
+EBUILD udev-125-r1.ebuild 10697 RMD160 d5cd2ef4bf95948d196920d079fae8c67c8af141 SHA1 870e2ef37d41e44c09348fc64ca042ee15706027 SHA256 fa388302ff376b21d2b286c85e7389282b382f0ceb88dd68f4c6c6455a02cac8
+MISC ChangeLog 80820 RMD160 24908c6c096168a296d086fd068bafa5321f8cd0 SHA1 0debee7746c2ac7a6f3c30435ba6499a990ca64d SHA256 486afd55fc1f17496b34d7c1043d5a1a95ae8491d2abf02b71983d37c9b81f45
 MISC metadata.xml 447 RMD160 d1ba09bd6a434b25c718673de9258cc544e090be SHA1 70c43d2863c09958849bfce8c5bb97d406a0662b SHA256 a9881de1424ac71191111bd30c7c1253589673b0cdce13c352204f1499e9d884
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkiKSQIACgkQt2vP6XvVdOfdOACgu+O9BokbENA2126+L4o2xQDN
-CFwAoJ7cUODfejqoFzJ2/ihoynDe3pUL
-=bRL+
+iEYEARECAAYFAkiK47AACgkQt2vP6XvVdOfVvACfR6AFlfF9yiEapyZDwOo6GnZb
+Ku4AnAuQwKYF6IHysvIVOW+QsW8lazqA
+=cK0V
 -----END PGP SIGNATURE-----
